# garlicpress

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: security.yml
findings_deepseek/: _summary.json
findings_deepseek/garlicpress/: __init__.py.json  _summary.json  cli.py.json  client.py.json  config.py.json  map_agent.py.json  queue.py.json  reduce.py.json  schema.py.json  skeleton.py.json  swap.py.json
findings_deepseek/tests/: __init__.py.json  _summary.json  test_schema.py.json  test_skeleton.py.json
findings_self/: _summary.json  skeleton.txt
findings_self/garlicpress/: __init__.py.json  _summary.json  cli.py.json  client.py.json  config.py.json  map_agent.py.json  queue.py.json  reduce.py.json  schema.py.json  skeleton.py.json  swap.py.json
findings_self/tests/: __init__.py.json  _summary.json  test_schema.py.json  test_skeleton.py.json
garlicpress/: cli.py  client.py  config.py  map_agent.py  queue.py  reduce.py  schema.py  skeleton.py  swap.py
garlicpress/prompts/: map.md  reduce.md  swap.md
portfolio/: COMPLETE_RESULTS.md  COMPREHENSIVE_COMPARISON.md  CRITICAL_EVALUATION_SUMMARY.md  CROSS_MODEL_VALIDATION.md  FIX_1_queue.py.md  FIX_2_reduce.py.md  FIX_3_config.py.md  FIX_4_webamp migrations.md  FIX_5_webamp algolia.ts.md  INDEX.md  MODELS_TESTED_APRIL_8.md  MODEL_COMPARISON.md  PR_READY_FIXES.md  README.md  TIMELINE.md  TRINITY_ANALYSIS.md  critical_evaluations.json  runs.md
tests/: test_schema.py  test_skeleton.py
