[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garlicpress"
version = "0.1.0"
description = "Distributed stateless LLM code evaluation — map, reduce, swap"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
garlicpress = "garlicpress.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["garlicpress"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
